Update HTML and Webpack packages

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         <section class="todo-list">
             <h3>to-do list</h3>
             <div class="list" id="todo-list">
-                <div class="todo-item">
+                <!-- <div class="todo-item">
                     <label>
                         <input type="checkbox">
                         <span class="bubble business"></span>
@@ -82,7 +82,7 @@
                         <button class="edit">edit</button>
                         <button class="delete">delete</button>  
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </div>
