Add get/set information in localStorage

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>to-to list</title>   
+    <title>Let's Do</title>   
 </head>
 <body>
-    <div class="container">
         <section class="greetng">
             <h2 class="title">
                 what's up, <input type="text" id="name" placeholder="Name here">
@@ -15,9 +14,9 @@
         </section>
 
         <section class="create-todo">
-            <h3>create a to-do</h3>
+            <h3>create a to-Do</h3>
             <form id="new-todo-form">
-                <h4>what's on your to-do list?</h4>
+                <h4>what's on your to-Do list?</h4>
                 <input 
                     type="text" 
                     name="content" 
